crates/nash-report/src/snapshots/nash_report__canonicalize__branches__qualified_ambiguity.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
  × Ambiguous type `A.Box`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help:     First.Box
            Second.Box

        Give these imports distinct aliases.
