crates/nash-report/src/snapshots/nash_report__canonicalize__branches__qualified_missing_import.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
  × Unknown variable `Missing.value`.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: Import `Missing` or check its alias.
