crates/nash-report/src/snapshots/nash_report__canonicalize__branches__recursive_alias_cycle.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "type alias First = Second\ntype alias Second = Third\ntype alias Third = First"
---
nash::names::recursive_alias

  × Type alias `First` expands recursively.
   ╭─[Main.nash:1:12]
 1 │ type alias First = Second
   ·            ─────
 2 │ type alias Second = Third
   ╰────
  help:     ┌─────┐
            │    First
            │     ↓
            │    Second
            │     ↓
            │    Third
            └─────┘

        Convert at least one alias in this cycle to a custom type.
