crates/nash-report/src/snapshots/nash_report__canonicalize__branches__recursive_decl_cycle.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
nash::names::recursive_decl

  × Value `name` depends on itself.
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help:     ┌─────┐
            │    name
            │     ↓
            │    other
            └─────┘

        Break the cycle between these value definitions.
