crates/nash-report/src/snapshots/nash_report__canonicalize__branches__recursive_let_self.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (..)\nvalue =\n    let\n        name = name\n    in\n    name\n"
---
nash::names::recursive_let

  × Value `name` depends on itself.
   ╭─[Main.nash:4:9]
 3 │     let
 4 │         name = name
   ·         ────
 5 │     in
   ╰────
  help:

        Break the cycle between these value definitions.
