crates/nash-report/src/snapshots/nash_report__canonicalize__branches__source_pipeline_overlapping_impls.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Bad exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\nimpl Keep () where\n    keep x = x\nimpl Keep () where\n    keep x = x\n"
---
nash::names::overlapping_impls

  × These `Bad.Keep` impls can both match the same trait arguments. The overlapping
  │ head is Primitive.unit:
   ╭─[Bad.nash:6:1]
 3 │         keep : 'a -> 'a
 4 │ ╭─▶ impl Keep () where
 5 │ ├─▶     keep x = x
   · ╰──── first impl in `Bad`
 6 │ ╭─▶ impl Keep () where
 7 │ ├─▶     keep x = x
   · ╰──── overlapping impl in `Bad`
   ╰────
  help: Remove one impl or make their heads disjoint; ordinary trait constraints do not
        disambiguate heads.
