crates/nash-report/src/snapshots/nash_report__canonicalize__branches__source_pipeline_reports_all_missing_names.snap
---
source: crates/nash-report/src/canonicalize.rs
description: "module Main exposing (..)\nfirst = missing\nsecond = absent\n"
---
nash::names::not_found_var

  × Unknown variable `missing`.
   ╭─[Main.nash:2:9]
 1 │ module Main exposing (..)
 2 │ first = missing
   ·         ───────
 3 │ second = absent
   ╰────
  help: Similar names:

            first
            second
            Builtin.bData
            Builtin.iData

nash::names::not_found_var

  × Unknown variable `absent`.
   ╭─[Main.nash:3:10]
 2 │ first = missing
 3 │ second = absent
   ·          ──────
   ╰────
  help: Similar names:

            first
            second
            Builtin.bData
            Builtin.iData
