crates/nash-report/src/snapshots/nash_report__canonicalize__branches__superclass_cycle.snap
---
source: crates/nash-report/src/canonicalize.rs
expression: "crate::render_plain(&to_report(&source, &error), &source, \"Main.nash\")"
---
  × The `Core.Equal` impl for 'a0 does not establish superclass 1:
   ╭─[Main.nash:1:1]
 1 │ name = other
   · ────
   ╰────
  help: It must also satisfy `Core.Equal 'a`. Resolving it leads back to the same
        requirement, forming a cycle. Add the required impl or include the necessary
        constraint in this impl's context.
